# gemini-fri

./: README.md  gemini_live_text.py  main.py  plan.md  pyproject.toml  requirements.txt
.claude/: settings.json
sdk/: __init__.py  types.py
sdk/core/: __init__.py  exceptions.py  models.py
sdk/resources/chat/: completions.py
