[project]
name = "gemini-fri"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "openai>=2.41.0",
]
